--- a/static/css/_posts.css
+++ b/static/css/_posts.css
@@ -17,6 +17,20 @@
   background: transparent;
   visibility: hidden;
   z-index: 10;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+.post-image-zoomed__text-panel {
+  position: relative;
+  color: white;
+  z-index: 2;
+  width: 100%;
+  line-height: 1.4;
+  padding: 54px 20%;
+  font-size: 18px;
+  text-align: center;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
 }
 .posts {
   column-count: 3;
