--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -19,6 +19,20 @@
     background: transparent;
     visibility: hidden;
     z-index: 10;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    &__text-panel{
+      position: relative;
+      color: white;
+      z-index: 2;
+      width: 100%;
+      line-height: 1.4;
+      padding: 54px 20%;
+      font-size: 18px;
+      text-align: center;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+    }
   }
   &s {
     column-count: 3;
