--- a/fe-web/render/include/header.hbs
+++ b/fe-web/render/include/header.hbs
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="text-ctr">
+    <a href="/" class="text-ctr">
         <div class="equalizer-CTR">
             <div class="bar-c">
                 <div id="bar-1" class="bar"></div>
@@ -14,5 +14,5 @@
         <h1 class="title">
             Stonebridge Studio
         </h1>
-    </div>
+    </a>
 </header>
