--- a/static/less/_menu.less
+++ b/static/less/_menu.less
@@ -1,5 +1,22 @@
 @import "_variables";
 
+.common-effect() {
+  //background: rgba(255, 255, 255, 0.1);
+  .line-3 i {
+    width: 100%;
+    height: 100%;
+    transition: width 0.2s ease-out 0.2s;
+  }
+  .line-2 i {
+    width: 100%;
+    height: 100%;
+    transition: height 0.2s ease-out 0s;
+  }
+  a {
+    color: @tan;
+  }
+}
+
 .menu {
   position: fixed;
   z-index: 1;
@@ -7,7 +24,7 @@
   right: 0;
   height: 100vh;
   padding: 40px 20px;
-  background:white;
+  background: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +33,7 @@
   &-ctr {
     position: relative;
     &:before {
-      background: fade( @saddle-brown,90);
+      background: fade(@saddle-brown, 90);
       transition: all .5s;
       display: none;
       content: "";
@@ -29,10 +46,9 @@
       left: 0;
       .fadeIn();
     }
-    &.is-navopen{
+    &.is-navopen {
       &:before {
         display: block;
-
 
       }
     }
@@ -52,6 +68,19 @@
     text-transform: uppercase;
     padding: 20px 120px 20px 40px;
     transition: all .3s ease-out;
+
+    .homepage &.homepage {
+      .common-effect();
+      pointer-events: none;
+    }
+    .artists &.artists {
+      .common-effect();
+      pointer-events: none;
+    }
+    .who-we-are &.who-we-are {
+      .common-effect();
+      pointer-events: none;
+    }
     .line-3 i {
       left: 0;
       transition: width 0.2s ease-out 0s;
@@ -67,18 +96,7 @@
       }
     }
     &:hover {
-      //background: rgba(255, 255, 255, 0.1);
-      .line-3 i {
-
-        transition: width 0.2s ease-out 0.2s;
-      }
-      .line-2 i {
-
-        transition: height 0.2s ease-out 0s;
-      }
-      a {
-        color: @tan;
-      }
+      .common-effect();
     }
     a {
       line-height: 45px;
