--- a/fe-web/render/include/scripts.hbs
+++ b/fe-web/render/include/scripts.hbs
@@ -1,5 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 <script src="/static/js/main.js"></script>
+{{#if _production}}
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -10,6 +11,7 @@
     ga('send', 'pageview');
 
 </script>
+{{/if}}
 <!--<script src="/static/js/barba.min.js"></script>-->
 <!--<script-->
         <!--src="//code.jquery.com/jquery-1.12.4.min.js"-->
